--- a/ConsoleProjectGoogleDriveApi/ConsoleProjectGoogleDriveApi.csproj
+++ b/ConsoleProjectGoogleDriveApi/ConsoleProjectGoogleDriveApi.csproj
@@ -56,6 +56,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -65,9 +66,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DriveServiceAccount.cs" />
-    <Compile Include="FilesList.cs" />
+    <Compile Include="FilesListOfDrive.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ConfigureFiles.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
